<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mymusic"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/search"
        android:src="@drawable/outline_search_24"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <FrameLayout
        android:id="@+id/fav_card"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toStartOf="@+id/history_card"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"

        >

        <ImageView
            android:id="@+id/favBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/fav_btn"
            android:src="@drawable/baseline_favorite_24"
            app:tint="@color/white" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/history_card"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="24dp"

        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/search_card"
        app:layout_constraintStart_toEndOf="@+id/fav_card"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <ImageView
            android:id="@+id/historyBtn"

            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/fav_btn"
            android:src="@drawable/outline_history_24" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/search_card"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/history_card"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <ImageView
            android:id="@+id/searchBtnCard"

            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/fav_btn"
            android:src="@drawable/outline_search_24"
            app:tint="@color/white" />

    </FrameLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/CustomTabTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_card"
        app:tabIndicatorColor="@color/black"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="#6F6E6E"

        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>